--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-<Button
-    android:text="start service"
-    android:id="@+id/startService"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+
     <Button
-        android:text="stop service"
+        android:id="@+id/startService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start service" />
+
+    <Button
         android:id="@+id/stopService"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="stop service" />
 
     <Button
         android:id="@+id/next_activity"
@@ -24,4 +24,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/acme"
         android:text="next activity" />
+    <TextView
+        android:id="@+id/count"
+        android:textSize="18sp"
+        android:padding="16dp"
+        android:text="count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
